fix: change font-weight of subtitle on mobile

--- a/src/pages/Home/Sections/Landing/Landing.module.scss
+++ b/src/pages/Home/Sections/Landing/Landing.module.scss
@@ -64,6 +64,10 @@
       display: flex;
       flex-direction: column;
       text-align: center;
+
+      .title {
+        font-weight: 400;
+      }
     }
   }
 }
